0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_processing/denoising/plot_denoising.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/denoising/plot_denoising.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_denoising_plot_denoising.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_denoising_plot_denoising.py:


Denoising a 2D Raman spectrum
=============================

In this example, we use the `denoise` method to remove the noise from a 2D Raman
spectrum.

.. GENERATED FROM PYTHON SOURCE LINES 18-19

Import spectrochempy

.. GENERATED FROM PYTHON SOURCE LINES 19-24

.. code-block:: default


    import spectrochempy as scp

    scp.set_loglevel("INFO")  # to see information








.. GENERATED FROM PYTHON SOURCE LINES 25-26

Load the data (should be a 2D spectrum or a list of datasets that can be merged):

.. GENERATED FROM PYTHON SOURCE LINES 26-29

.. code-block:: default


    dataset = scp.read("ramandata/labspec/serie190214-1.txt")








.. GENERATED FROM PYTHON SOURCE LINES 30-31

select the useful region

.. GENERATED FROM PYTHON SOURCE LINES 31-34

.. code-block:: default


    nd = dataset[:, 60.0:]








.. GENERATED FROM PYTHON SOURCE LINES 35-36

Basic plot

.. GENERATED FROM PYTHON SOURCE LINES 36-39

.. code-block:: default


    _ = nd.plot(title="original data")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_001.png
   :alt: original data
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 40-41

Detrend the data (for a easier comparison)

.. GENERATED FROM PYTHON SOURCE LINES 41-45

.. code-block:: default


    nd1 = nd.detrend(title="detrended data")
    _ = nd1.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_002.png
   :alt: plot denoising
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 46-48

Denoise the data using the `denoise` method with the default parameters
i.e., ratio=99.8

.. GENERATED FROM PYTHON SOURCE LINES 48-51

.. code-block:: default

    nd2 = nd1.denoise()
    _ = nd2.plot(title="denoised data")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_003.png
   :alt: denoised data
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 52-53

Denoise the data using a different ratio

.. GENERATED FROM PYTHON SOURCE LINES 53-60

.. code-block:: default

    nd3 = nd1.denoise(ratio=95)
    _ = nd3.plot(title="denoised data")


    nd4 = nd1.denoise(ratio=90)
    _ = nd4.plot(title="denoised data")




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_004.png
         :alt: denoised data
         :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_004.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_005.png
         :alt: denoised data
         :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_005.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 62-65

This example shows that denoising can be used effectively on such spectra to increase the signal-to-noise ratio.
However, it apparently has a poor effect on eliminating cosmic ray peaks.
For the latter, it may be useful to use `despike` methods as seen in another example.

.. GENERATED FROM PYTHON SOURCE LINES 67-68

This ends the basic example of denoising a 2D Raman spectrum.

.. GENERATED FROM PYTHON SOURCE LINES 68-71

.. code-block:: default


    # scp.show()  # uncomment to show plot if running from a script









.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.299 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_denoising_plot_denoising.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_denoising.py <plot_denoising.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_denoising.ipynb <plot_denoising.ipynb>`
